preflight/tests/ui/fail-invalid-syntax.stderr
error: expected `,`
 --> $DIR/fail-invalid-syntax.rs:8:32
  |
8 | #[avionics_harness(ooooo , eee / 0099 | gee)]
  |                                ^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-invalid-syntax.rs:3:40
  |
3 | use preflight::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: `#[panic_handler]` function required, but not found

error: language item required, but not found: `eh_personality`
